--- a/index.html
+++ b/index.html
@@ -791,7 +791,7 @@
       <div class="container">
         <div class="form">
           <!-- <form action="forms/contact.php" method="post" role="form" class="php-email-form"> -->
-          <form action="https://formspree.io/gaurharshit04@gmail.com" method="POST">
+          <form action="https://formspree.io/f/mvoljroy" method="POST" class="php-email-form">
             <div class="row">
               <div class="form-group col-md-6">
                 <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
