Added Coursework and Online Learning Section. 2. Replaced Favicon usage from font awesome to other library

--- a/index.html
+++ b/index.html
@@ -36,8 +36,10 @@
   <!-- <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.7.2/css/all.css"> -->
 
   <!-- Tableau Favicon Files -->
-  <link rel="stylesheet" href="https://i.icomoon.io/public/temp/903ff56f1b/UntitledProject/style-svg.css">
-  <script defer src="https://i.icomoon.io/public/temp/903ff56f1b/UntitledProject/svgxuse.js"></script>
+  <!-- <link rel="stylesheet" href="https://i.icomoon.io/public/temp/903ff56f1b/UntitledProject/style-svg.css">
+  <script defer src="https://i.icomoon.io/public/temp/903ff56f1b/UntitledProject/svgxuse.js"></script> -->
+
+  <script src="https://code.iconify.design/2/2.2.1/iconify.min.js"></script>
 
   <!-- =======================================================
   * Template Name: Reveal - v4.7.0
@@ -57,12 +59,12 @@
         <a href="tel:+16173960129"><i class="bi bi-phone d-flex align-items-center ms-4"><span>+1 (617) 396-0129</span></i></a>
       </div>
       <div class="social-links d-none d-md-flex align-items-center">
-        <a href="https://www.linkedin.com/in/harshitgaur-/" target="_blank" class="linkedin"><i class="bi bi-linkedin"></i></a>
-        <a href="https://github.com/harshitgaur6155" target="_blank" class="github"><i class="bi bi-github"></i></a>
+        <a href="https://www.linkedin.com/in/harshitgaur-/" target="_blank" class="linkedin"><span class="iconify" data-icon="logos:linkedin-icon"></span><!--<i class="bi bi-linkedin"></i>--></a>
+        <a href="https://github.com/harshitgaur6155" target="_blank" class="github"><span class="iconify" data-icon="logos:github-icon"></span><!--<i class="bi bi-github"></i>--></a>
         <!-- <a href="https://public.tableau.com/app/profile/harshitgaur" target="_blank" class="tableau"><i class="fab fa-tableau"></i></a> -->
-        <a href="https://public.tableau.com/app/profile/harshitgaur" target="_blank" class="tableau"><svg class="icon icon-tableau-software_favicon_svg"><use xlink:href="#icon-tableau-software_favicon_svg"></use></svg></a>
-        <a href="https://rpubs.com/harshitgaur" target="_blank" class="rproject"><svg class="icon icon-r"><use xlink:href="#icon-r"></use></svg></a>
-        <a href="assets/resume/HarshitGaur_Resume.pdf" target="_blank"><i class="fa fa-file"></i></a>
+        <a href="https://public.tableau.com/app/profile/harshitgaur" target="_blank" class="tableau"><span class="iconify" data-icon="logos:r-lang"></span></a>
+        <a href="https://rpubs.com/harshitgaur" target="_blank" class="rproject"><span class="iconify" data-icon="logos:tableau-icon"></span></a>
+        <a href="assets/resume/HarshitGaur_Resume.pdf" target="_blank"><span class="iconify" data-icon="bi:file-earmark-fill"></span><!--<i class="fa fa-file"></i>--></a>
       </div>
     </div>
   </section><!-- End Top Bar-->
@@ -176,8 +178,8 @@
     <!--========================================
     # Featured Projects
     =========================================-->
-    <section id="featured" class="wow fadeInUp">
-      <div class="container">
+    <section id="featured">
+      <div class="container" data-aos="fade-up">
         <div class="section-header">
           <h2>Featured Key Projects</h2>
           <h7>This section showcases some of my recent key projects. For all projects, please navigate to the <b><a href="projects/index.html" target="_blank">Projects Portfolio</a></b> page.</h7>
@@ -677,7 +679,7 @@
     ===============================================-->
 
     <section id="courses">
-      <div class="container aos-init aos-animate" data-aos="fade-up">
+      <div class="container" data-aos="fade-up">
         <div class="row">
           <div class="section-header">
             <h2>Coursework</h2>
@@ -698,17 +700,16 @@
               </div>
               <p class="description">
                 <ul>
-                  <li style="font-size: 13px;"><a href="https://github.com/srishtis/IDS-705_Assignments">Principles of Machine Learning</a> taught by Dr. Kyle Bradbury</li>
-                  <li style="font-size: 13px;"><a href="https://github.com/srishtis/ece685_dl">Introduction to Deep Learning</a> taught by Prof. Vahid Tarokh</li>
-                  <li style="font-size: 13px;"><a href="https://github.com/srishtis/IDS702-Fall2020">Modelling and Representation of Data</a> taught by Dr. Olanrewaju M. Akande</li>
-                  <li style="font-size: 13px;"><a href="https://noahgift.github.io/cloud-data-analysis-at-scale/syllabus">Data Analysis at Scale in Cloud</a> taught by Noah Gift</li>
-                  <li style="font-size: 13px;"><a href="https://github.com/srishtis/IDS-703-Data-Scraping-and-Text-Analysis">Introduction to Data Scraping and Text Analysis</a> taught by Prof. Christopher Andrew Bail</li>
-                  <li style="font-size: 13px;">Computational Topology (TDA) taught by Prof. John Harer</li>
-                  <li style="font-size: 13px;">Introduction to High Dimensional Data Analysis taught by Dr. Paul L Bendich</li>
-                  <li style="font-size: 13px;"><a href="https://sta-602l-s20.github.io/Course-Website/">Bayesian and Modern Statistics</a> taught by Dr. Olanrewaju M. Akand</li>
-                  <li style="font-size: 13px;">Data Science Ethics</li>
-                  <li style="font-size: 13px;">Data Logic, Visualization and Storytelling</li>
-                  <li style="font-size: 13px;">Advanced Game Theory</li>
+                  <li style="font-size: 13px;"><a href="#">Introduction to Analytics</a> taught by <a style="color:#2049b9" href="https://www.linkedin.com/in/richard-he-5b8039114/" target="_blank">Prof. Richard He</a></li>
+                  <li style="font-size: 13px;"><a href="#">Probability Theory and Introductory Statistics</a> taught by <a style="color:#2049b9" href="https://www.linkedin.com/in/aminkarimpour/" target="_blank">Prof. Amin Karimpour</a></li>
+                  <li style="font-size: 13px;"><a href="#">Analytics Systems Technology</a> taught by <a style="color:#2049b9" href="https://www.linkedin.com/in/richard-he-5b8039114/" target="_blank">Prof. Richard He</a></li>
+                  <li style="font-size: 13px;"><a href="#">Intermediate Analytics</a> taught by <a style="color:#2049b9" href="https://www.linkedin.com/in/roywada/" target="_blank">Prof. Roy Wada, Ph.D</a></li>
+                  <li style="font-size: 13px;"><a href="#">Introduction to Enterprise Analytics</a> taught by <a style="color:#2049b9" href="https://www.linkedin.com/in/richard-he-5b8039114/" target="_blank">Prof. Richard He</a></li>
+                  <li style="font-size: 13px;"><a href="#">Communication and Visualization for Data Analytics</a> taught by <a style="color:#2049b9" href="https://www.linkedin.com/in/trubskyy/" target="_blank">Prof. Mykhaylo B. Trubskyy</a></li>
+                  <li style="font-size: 13px;"><a href="#">Fundamentals of Artificial Intelligence</a> taught by <a style="color:#2049b9" href="https://www.linkedin.com/in/sergiy-shevchenko-42ba0531/" target="_blank">Prof. Sergiy Shevchenko</a></li>
+                  <li style="font-size: 13px;"><a href="#">Applications of Artificial Intelligence</a> taught by <a style="color:#2049b9" href="https://www.linkedin.com/in/abhijit-sanyal-0a6349/" target="_blank">Prof. Abhijit Sanyal</a></li>
+                  <li style="font-size: 13px;"><a href="#">Preparation for Experiential Learning</a> taught by <a style="color:#2049b9" href="https://www.linkedin.com/in/yvonnerogers/" target="_blank">Prof. Yvonne Rogers</a></li>
+                  <li style="font-size: 13px;"><a href="#">Integrated Experiential Learning</a> taught by <a style="color:#2049b9" href="#" target="_blank">Prof. Valerie A. Atherley</a></li>
                 </ul>	
               </p>
             </div>
@@ -729,15 +730,10 @@
               </div>
               <p class="description">
                 <ul>
-                  <li style="font-size: 13px;"><a href="https://github.com/srishtis/Mathematics-courses/tree/master/Maxima%20and%20Minima%20Concepts-%20Applications%20and%20Derivatives">Udemy: Maxima and Minima concepts : Applications of Derivatives </a></li>
-                  <li style="font-size: 13px;"><a href="https://github.com/srishtis/Mathematics-courses/tree/master/Particle%20Swarm%20Optimization%20in%20MATLAB">Udemy: Particle Swarm Optimization in MATLAB </a></li>	
-                  <li style="font-size: 13px;"><a href="https://github.com/srishtis/Mathematics-courses/blob/master/Coursera%20ALN5Z8FTFZPP.pdf">Coursera Specialization: Mathematics for Machine Learning</a>- <a href="https://github.com/srishtis/Mathematics-courses/tree/master/Mathematics%20for%20Machine%20Learning-%20Linear%20Algebra">Linear Algebra </a>, <a href="https://github.com/srishtis/Mathematics-courses/tree/master/Mathematics%20for%20Machine%20Learning-%20Multivariate%20Calculus">Multivariate Calculus</a> and <a href="https://github.com/srishtis/Mathematics-courses/tree/master/Mathematics%20for%20Machine%20Learning-%20PCA">PCA</a></li>
-                  <li style="font-size: 13px;"><a href="https://github.com/srishtis/Mathematics-courses/blob/master/Advanced%20Linear%20Models%20for%20Data%20Science%201-%20Least%20Squares/Coursera%20SPGWHQ936FED.pdf">Coursera: Advanced Linear Models for Data Science 1: Least Squares</a></li>
-                  <li style="font-size: 13px;"><a href="https://github.com/srishtis/Mathematics-courses/blob/master/Advanced%20Linear%20Models%20for%20Data%20Science%202-%20Statistical%20Linear%20Models/Coursera%20GW6YNXAWXSUT.pdf">Coursera: Advanced Linear Models for Data Science 2: Statistical Linear Models</a></li>	
-                  <li style="font-size: 13px;"><a href="https://github.com/srishtis/Mathematics-courses/tree/master/Combinatorics%20and%20Probability">Coursera: Combinatorics and Probability</a></li>
-                  <li style="font-size: 13px;"><a href="https://github.com/srishtis/Mathematics-courses/tree/master/Data%20Science%20Math%20Skills">Coursera: Data Science Math Skills</a></li>
-                  <li style="font-size: 13px;"><a href="https://github.com/srishtis/Mathematics-courses/tree/master/Coursera-%20introduction%20to%20graph%20theory">Coursera: Introduction to Graph Theory</a></li>	
-                  <li style="font-size: 13px;"><a href="https://www.edx.org/course/ap-calculus-challenging-concepts-from-calculus-ab-calculus-bc">edX: AP® Calculus: Challenging Concepts from Calculus AB &amp; Calculus BC (audited the course)</a></li>
+                  <li style="font-size: 13px;"><a href="#">Intermediate SQL for Data Scientists </a></li>	
+                  <li style="font-size: 13px;"><a href="#">Python for Data Science Essential</a></li>
+                  <li style="font-size: 13px;"><a href="#">Coursera: Advanced Linear Models for Data Science 2: Statistical Linear Models</a></li>
+                  <li style="font-size: 13px;"><a href="#">Coursera: Data Science Math Skills</a></li>
                 </ul>	
               </p>
             </div>
