--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <meta content="width=device-width, height=device-height, initial-scale=1.0" name="viewport">
 
   <title>Harshit Gaur</title>
   <meta content="" name="description">
@@ -53,12 +53,12 @@
 
   <!-- ======= Top Bar ======= -->
   <section id="topbar" class="d-flex align-items-center">
-    <div class="container d-flex justify-content-center justify-content-md-between">
+    <div class="container d-flex justify-content-center justify-content-md-between" style="height: 100%!important; flex-wrap: wrap!important;">
       <div class="contact-info d-flex align-items-center">
         <i class="bi bi-envelope d-flex align-items-center"><a href="mailto:gaurharshit04@gmail.com">gaurharshit04@gmail.com</a></i>
         <a href="tel:+16173960129"><i class="bi bi-phone d-flex align-items-center ms-4"><span>+1 (617) 396-0129</span></i></a>
       </div>
-      <div class="social-links d-none d-md-flex align-items-center">
+      <div class="social-links d-flex d-lg-flex align-items-center">
         <a href="https://www.linkedin.com/in/harshitgaur-/" target="_blank" class="linkedin"><span class="iconify" data-icon="logos:linkedin-icon"></span><!--<i class="bi bi-linkedin"></i>--></a>
         <a href="https://github.com/harshitgaur6155" target="_blank" class="github"><span class="iconify" data-icon="logos:github-icon"></span><!--<i class="bi bi-github"></i>--></a>
         <!-- <a href="https://public.tableau.com/app/profile/harshitgaur" target="_blank" class="tableau"><i class="fab fa-tableau"></i></a> -->
@@ -124,15 +124,15 @@
       <div class="col-lg-8 col-md-8">
         <ul>
           <li><h7>I am a current graduate students in the Masters in Analytics program at Northeastern University, Boston, Massachusetts, United States.</h7></li>
-          <li><h7>The concentraion track for my majors is in Machine Learning and Artificial Intelligence.</h7></li>
+          <li><h7>The concentration track for my majors is in Machine Learning and Artificial Intelligence.</h7></li>
           <li><h7>I have 4 years of industry-experience as a Software Engineer and an Analyst.</h7></li>
-          <li><h7>I’m currently learning the field of deep learning using Fastai with subjects of data analytics and data science.</h7></li>
+          <li><h7>I'm currently learning the field of deep learning using Fastai with subjects of data analytics and data science.</h7></li>
         </ul>
       </div>
 
-      <div>
-        <a href="projects/index.html" class="btn-projects scrollto">My Projects</a>
-        <a href="#courses" class="btn-get-started scrollto">My Coursework</a>
+      <div class="d-flex align-items-center">
+        <a href="projects/index.html" class="btn-projects scrollto">Projects</a>
+        <a href="#courses" class="btn-get-started scrollto">Coursework</a>
       </div>
 
     </div>
