Coursework Section - Made Responsive for iPhone and Desktop

--- a/index.html
+++ b/index.html
@@ -678,7 +678,7 @@
     # Skills and Courses Section
     ===============================================-->
 
-    <section id="courses">
+    <!-- <section id="courses">
       <div class="container" data-aos="fade-up">
         <div class="row">
           <div class="section-header">
@@ -741,8 +741,77 @@
           </div>
         </div>
       </div>
+    </section> -->
+    <!-- End Courses Section -->
+
+
+
+    <section id="coursess">
+      <div class="container" data-aos="fade-up">
+        <div class="section-header">
+          <h2>Coursework</h2>
+          <p>This section highlights my relevant coursework in Analytics, Machine Learning, Statistics, Data Sciences, and Artificial Intelligence. Please, click the links to see my course deliverables/assignments for each course.</p>
+        </div>
+
+        <div class="row contact-info" data-aos="fade-up">
+
+          <div class="col-lg-6" style="text-align: center;"> 
+            <img src="assets/img/northeastern_university.jpg" alt="" style="width: 100%; height: 100%;">
+          </div>
+
+          <div class="col-lg-6">
+            <div class="portfolio-info">
+              <h2>Northeastern University</h2>
+            </div>
+            <p class="description">
+              <ul>
+                <li style="font-size: 13px;"><a href="#">Introduction to Analytics</a> taught by <a style="color:#2049b9" href="https://www.linkedin.com/in/richard-he-5b8039114/" target="_blank">Prof. Richard He</a></li>
+                <li style="font-size: 13px;"><a href="#">Probability Theory and Introductory Statistics</a> taught by <a style="color:#2049b9" href="https://www.linkedin.com/in/aminkarimpour/" target="_blank">Prof. Amin Karimpour</a></li>
+                <li style="font-size: 13px;"><a href="#">Analytics Systems Technology</a> taught by <a style="color:#2049b9" href="https://www.linkedin.com/in/richard-he-5b8039114/" target="_blank">Prof. Richard He</a></li>
+                <li style="font-size: 13px;"><a href="#">Intermediate Analytics</a> taught by <a style="color:#2049b9" href="https://www.linkedin.com/in/roywada/" target="_blank">Prof. Roy Wada, Ph.D</a></li>
+                <li style="font-size: 13px;"><a href="#">Introduction to Enterprise Analytics</a> taught by <a style="color:#2049b9" href="https://www.linkedin.com/in/richard-he-5b8039114/" target="_blank">Prof. Richard He</a></li>
+                <li style="font-size: 13px;"><a href="#">Communication and Visualization for Data Analytics</a> taught by <a style="color:#2049b9" href="https://www.linkedin.com/in/trubskyy/" target="_blank">Prof. Mykhaylo B. Trubskyy</a></li>
+                <li style="font-size: 13px;"><a href="#">Fundamentals of Artificial Intelligence</a> taught by <a style="color:#2049b9" href="https://www.linkedin.com/in/sergiy-shevchenko-42ba0531/" target="_blank">Prof. Sergiy Shevchenko</a></li>
+                <li style="font-size: 13px;"><a href="#">Applications of Artificial Intelligence</a> taught by <a style="color:#2049b9" href="https://www.linkedin.com/in/abhijit-sanyal-0a6349/" target="_blank">Prof. Abhijit Sanyal</a></li>
+                <li style="font-size: 13px;"><a href="#">Preparation for Experiential Learning</a> taught by <a style="color:#2049b9" href="https://www.linkedin.com/in/yvonnerogers/" target="_blank">Prof. Yvonne Rogers</a></li>
+                <li style="font-size: 13px;"><a href="#">Integrated Experiential Learning</a> taught by <a style="color:#2049b9" href="#" target="_blank">Prof. Valerie A. Atherley</a></li>
+              </ul>	
+            </p>
+          </div>
+
+        </div>
+
+        <br><br>
+
+        <div class="row contact-info" data-aos="fade-up">
+
+          <div class="col-lg-6" style="text-align: center;"> 
+            <img src="assets/img/online-learn.png" alt="" style="width: 100%; height: 100%;">
+          </div>
+
+          <div class="col-lg-6">
+            <div class="portfolio-info">
+              <h2>Online Learning</h2>
+            </div>
+            <p class="description">
+              <ul>
+                <li style="font-size: 13px;"><a href="#">Intermediate SQL for Data Scientists </a></li>	
+                <li style="font-size: 13px;"><a href="#">Python for Data Science Essential</a></li>
+                <li style="font-size: 13px;"><a href="#">Coursera: Advanced Linear Models for Data Science 2: Statistical Linear Models</a></li>
+                <li style="font-size: 13px;"><a href="#">Coursera: Data Science Math Skills</a></li>
+              </ul>	
+            </p>
+          </div>
+
+        </div>
+
+      </div>
+
+    </section>
     </section>
     <!-- End Courses Section -->
+
+  
 
     <!-- ======= Contact Section ======= -->
     <section id="contact">
