--- a/index.html
+++ b/index.html
@@ -678,7 +678,7 @@
     # Skills and Courses Section
     ===============================================-->
 
-    <!-- <section id="courses">
+    <!-- <section id="courses-old">
       <div class="container" data-aos="fade-up">
         <div class="row">
           <div class="section-header">
@@ -744,9 +744,7 @@
     </section> -->
     <!-- End Courses Section -->
 
-
-
-    <section id="coursess">
+    <section id="courses">
       <div class="container" data-aos="fade-up">
         <div class="section-header">
           <h2>Coursework</h2>
@@ -811,7 +809,6 @@
     </section>
     <!-- End Courses Section -->
 
-  
 
     <!-- ======= Contact Section ======= -->
     <section id="contact">
