Featured Projects - Made Responsive and Rectified Formatting Issues

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
     <!--========================================
     # Featured Projects
     =========================================-->
-    <section id="featured">
+    <!-- <section id="featured-old">
       <div class="container" data-aos="fade-up">
         <div class="section-header">
           <h2>Featured Key Projects</h2>
@@ -209,7 +209,6 @@
           <a href="#" target="_blank">
             <div class="property-image">
             <div class="property-image-title">
-              <!-- Optional <h5>Card Title</h5> If you want it, turn on the CSS also. -->
             </div>
             </div></a>
           <div class="property-description">
@@ -228,7 +227,6 @@
           <a href="#" target="_blank">
             <div class="property-image">
             <div class="property-image-title">
-              <!-- Optional <h5>Card Title</h5> If you want it, turn on the CSS also. -->
             </div>
             </div></a>
           <div class="property-description">
@@ -251,7 +249,6 @@
           <a href="project4/index.html" target="_blank">
             <div class="property-image">
             <div class="property-image-title">
-              <!-- Optional <h5>Card Title</h5> If you want it, turn on the CSS also. -->
             </div>
             </div></a>
           <div class="property-description">
@@ -270,7 +267,6 @@
           <a href="project5/index.html" target="_blank">
             <div class="property-image">
             <div class="property-image-title">
-              <!--<h6>Card Title</h6> -->
             </div>
             </div></a>
           <div class="property-description">
@@ -289,7 +285,6 @@
           <a href="project6/index.html" target="_blank">
             <div class="property-image">
             <div class="property-image-title">
-              <!-- Optional <h5>Card Title</h5> If you want it, turn on the CSS also. -->
             </div>
             </div></a>
           <div class="property-description">
@@ -305,7 +300,140 @@
       </div>
 
       </div>
-    </section><!-- #testimonials -->
+    </section> -->
+    <!-- #featured -->
+
+
+    <section id="featured">
+      <div class="container" data-aos="fade-up">
+        <div class="section-header">
+          <h2>Featured Key Projects</h2>
+          <p>This section showcases some of my recent key projects. For all projects, please navigate to the <b><a href="projects/index.html" target="_blank">Projects Portfolio</a></b> page.</p>
+        </div>
+
+        <div class="row gy-4">
+
+          <!-- #Project 1 -->
+          <div class="col-lg-4 col-md-4" data-aos="fade-up" data-aos-delay="100">
+            <div class="property-card">
+              <a href="#" target="_blank">
+                <div class="property-image">
+                  <div class="property-image-title"></div>
+                </div>
+              </a>
+              <div class="property-description">
+                <h5>Predictive Winner- US Presidential Political Party</h5>
+                <p style="font-size:12px;">
+                  <b>Industry</b>: Politics <br/>
+                  <b>Skills</b>: Python, R, SQL <br/>
+                  <b>Algorithms/Techniques</b>: Classification (Logistic Regression), Regularization (LASSO, Stepwise Selection)
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <!-- #Project 2 -->
+          <div class="col-lg-4 col-md-4" data-aos="fade-up" data-aos-delay="200">
+            <div class="property-card">
+              <a href="#" target="_blank">
+                <div class="property-image">
+                  <div class="property-image-title"></div>
+                </div>
+              </a>
+              <div class="property-description">
+                <h5> NYC Tree Census - Tableau Dashboard</h5>
+                <p style="font-size:12px;">
+                  <b>Domain</b>: Environmental <br/>
+                  <b>Skills</b>: Tableau, SQL<br/>
+                  <b>Algorithms/Techniques</b>: Tableau Dashboard
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <!-- #Project 3 -->
+          <div class="col-lg-4 col-md-4" data-aos="fade-up" data-aos-delay="300">
+            <div class="property-card">
+              <a href="#" target="_blank">
+                <div class="property-image">
+                  <div class="property-image-title"></div>
+                </div>
+              </a>
+              <div class="property-description">
+                <h5> Airbnb Price Estimator </h5>
+                <p style="font-size:12px;">
+                  <b>Industry</b>: Hotel Industry <br/>
+                  <b>Skills</b>: Python, SQL, Streamlit, HTML, Heroku App<br/>
+                  <b>Algorithms/Techniques</b>: Linear Regression, Decision Tree, Random Forest, XGBoost, LIME, SHAP
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <!-- #Project 4 -->
+          <div class="col-lg-4 col-md-4" data-aos="fade-up" data-aos-delay="400">
+            <div class="property-card">
+              <a href="project4/index.html" target="_blank">
+                <div class="property-image">
+                  <div class="property-image-title"></div>
+                </div>
+              </a>
+              <div class="property-description">
+                <h5> Prediction of Readmittance of Diabetic Patients </h5>
+                <p style="font-size:12px;">
+                  <b>Industry</b>: Healthcare <br/>
+                  <b>Skills</b>: Python, SQL <br/>
+                  <b>Algorithms/Techniques</b>: k-NN, Random Forest Classification, Decision Tree, SVM
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <!-- #Project 5 -->
+          <div class="col-lg-4 col-md-4" data-aos="fade-up" data-aos-delay="500">
+            <div class="property-card">
+              <a href="project5/index.html" target="_blank">
+                <div class="property-image">
+                  <div class="property-image-title"></div>
+                </div>
+              </a>
+              <div class="property-description">
+                <h5> Deterministic Topic Modeling & Clustering </h5>
+                <p style="font-size:12px;">
+                  <b>Domain</b>: Natural Language Processing (NLP) <br/>
+                  <b>Skills</b>: Weka, SQL, MALLET <br/>
+                  <b>Algorithms/Techniques</b>: Latent Dirichlet Allocation (LDA), Clustering (K-means)
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <!-- #Project 6 -->
+          <div class="col-lg-4 col-md-4" data-aos="fade-up" data-aos-delay="600">
+            <div class="property-card">
+              <a href="project6/index.html" target="_blank">
+                <div class="property-image">
+                  <div class="property-image-title"></div>
+                </div>
+              </a>
+              <div class="property-description">
+                <h5> DocDigitizer </h5>
+                <p style="font-size:12px;">
+                  <b>Industry</b>: Intelligent Document Processing (IDP) <br/>
+                  <b>Skills</b>: Python, R, SQL, Microsoft Azure<br/>
+                  <b>Algorithms/Techniques</b>: Classification (Logistic Regression, Decision Tree)
+                </p>
+              </div>
+            </div>
+          </div>
+
+        </div>
+
+      </div>
+    </section>
+    <!-- End Services Section -->
+
+
 
     <!-- ======= Services Section ======= -->
     <!-- <section id="services">
