--- a/index.html
+++ b/index.html
@@ -59,12 +59,12 @@
         <a href="tel:+16173960129"><i class="bi bi-phone d-flex align-items-center ms-4"><span>+1 (617) 396-0129</span></i></a>
       </div>
       <div class="social-links d-flex d-lg-flex align-items-center">
-        <a href="https://www.linkedin.com/in/harshitgaur-/" target="_blank" class="linkedin"><span class="iconify" data-icon="logos:linkedin-icon"></span><!--<i class="bi bi-linkedin"></i>--></a>
-        <a href="https://github.com/harshitgaur6155" target="_blank" class="github"><span class="iconify" data-icon="logos:github-icon"></span><!--<i class="bi bi-github"></i>--></a>
+        <a href="https://www.linkedin.com/in/harshitgaur-/" target="_blank" class="linkedin"><span class="iconify" data-icon="logos:linkedin-icon" style="font-size: 20px;"></span><!--<i class="bi bi-linkedin"></i>--></a>
+        <a href="https://github.com/harshitgaur6155" target="_blank" class="github"><span class="iconify" data-icon="logos:github-icon" style="font-size: 20px;"></span><!--<i class="bi bi-github"></i>--></a>
         <!-- <a href="https://public.tableau.com/app/profile/harshitgaur" target="_blank" class="tableau"><i class="fab fa-tableau"></i></a> -->
-        <a href="https://public.tableau.com/app/profile/harshitgaur" target="_blank" class="tableau"><span class="iconify" data-icon="logos:tableau-icon"></span></a>
-        <a href="https://rpubs.com/harshitgaur" target="_blank" class="rproject"><span class="iconify" data-icon="logos:r-lang"></span></a>
-        <a href="assets/resume/HarshitGaur_Resume.pdf" target="_blank"><span class="iconify" data-icon="bi:file-earmark-fill"></span><!--<i class="fa fa-file"></i>--></a>
+        <a href="https://public.tableau.com/app/profile/harshitgaur" target="_blank" class="tableau"><span class="iconify" data-icon="logos:tableau-icon" style="font-size: 20px;"></span></a>
+        <a href="https://rpubs.com/harshitgaur" target="_blank" class="rproject"><span class="iconify" data-icon="logos:r-lang" style="font-size: 20px;"></span></a>
+        <a href="assets/resume/HarshitGaur_Resume.pdf" target="_blank"><span class="iconify" data-icon="bi:file-earmark-fill" style="font-size: 20px;"></span><!--<i class="fa fa-file"></i>--></a>
       </div>
     </div>
   </section><!-- End Top Bar-->
