--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <div class="container d-flex justify-content-between">
 
       <div id="logo">
-        <h1><a href="#">Harshit <span>Gaur</span></a></h1>
+        <h1><a href="index.html">Harshit <span>Gaur</span></a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html"><img src="assets/img/HarshitGaur_ProfilePicture.jpg" alt="" sizes="32x32"></a> -->
       </div>
@@ -83,8 +83,7 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
-          <li><a class="nav-link scrollto" href="#featured">Featured Projects</a></li>
-          <li><a class="nav-link scrollto" href="projects/index.html">Projects Portfolio</a></li>
+          <li><a class="nav-link scrollto" href="#featured">Projects Portfolio</a></li>
           <li><a class="nav-link scrollto " href="#courses">Courses</a></li>
           <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
@@ -172,7 +171,8 @@
 
         </div>
       
-    </section><!-- End Resume Section -->
+    </section>
+    <!-- End Resume Section -->
 
 
     <!--========================================
@@ -431,7 +431,7 @@
 
       </div>
     </section>
-    <!-- End Services Section -->
+    <!-- End Featured Projects Section -->
 
 
 
@@ -942,7 +942,7 @@
     <section id="contact">
       <div class="container" data-aos="fade-up">
         <div class="section-header">
-          <h2>Contact Us</h2>
+          <h2>Contact Me</h2>
         </div>
 
         <div class="row contact-info">
