1. Created first project index file for - HbA1c value Readmittance of Diabetic patients. 2. Created 'index.html' file for this project. 3. Created css rules in style.css. 4. Added PDF report of this project in folder for iFrame.

--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
           <!-- #Project 4 -->
           <div class="col-lg-4 col-md-4" data-aos="fade-up" data-aos-delay="400">
             <div class="property-card">
-              <a href="project4/index.html" target="_blank">
+              <a href="projects/hba1c-readmittance-predict-project/index.html" target="_blank">
                 <div class="property-image">
                   <div class="property-image-title"></div>
                 </div>
