Made changes related to redirection and description of the 'Project' section

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
       </div>
 
       <div class="d-flex align-items-center">
-        <a href="projects/index.html" class="btn-projects scrollto">Projects</a>
+        <a href="#featured" class="btn-projects scrollto">Projects</a>
         <a href="#courses" class="btn-get-started scrollto">Coursework</a>
       </div>
 
@@ -308,7 +308,7 @@
       <div class="container" data-aos="fade-up">
         <div class="section-header">
           <h2>Featured Key Projects</h2>
-          <p>This section showcases some of my recent key projects. For all projects, please navigate to the <b><a href="projects/index.html" target="_blank">Projects Portfolio</a></b> page.</p>
+          <p>This section showcases some of my recent key projects. For all detailed information with dynamic working dashboards, github repositories, reports, please click on any project to navigate.</p>
         </div>
 
         <div class="row gy-4">
