Changing the source of PDF report file for device supportability and compatibility

--- a/projects/hba1c-readmittance-predict-project/index.html
+++ b/projects/hba1c-readmittance-predict-project/index.html
@@ -201,7 +201,8 @@
         </div>
 
         <div class="embed-responsive embed-responsive-21by9" style="height:510px">
-          <iframe class="embed-responsive-item" width="100%" height="100%" src="hba1c_diabetic-patients_readmittance_prediction.pdf#zoom=50"></iframe>
+          <!-- <iframe class="embed-responsive-item" width="100%" height="100%" src="hba1c_diabetic-patients_readmittance_prediction.pdf#zoom=50"></iframe> -->
+          <iframe class="embed-responsive-item" width="100%" height="100%" src="https://drive.google.com/file/d/1WMpUR4otfCE6qXq0DGbP5NX5-YLRUTaf/preview?usp=sharing#zoom=70"></iframe>
         </div>
 
       </div>
