HbA1c Project - Changed skills and algorithms

--- a/projects/hba1c-readmittance-predict-project.html
+++ b/projects/hba1c-readmittance-predict-project.html
@@ -135,7 +135,6 @@
               <div class="icon"><span class="iconify" data-icon="icon-park-twotone:brain" style="font-size: 50px; color: #68ddba;"></span></div>
               <h4 class="title">Skills</h4>
               <p class="description">- Python</p>
-              <p class="description">- R</p>
               <p class="description">- SQL</p>
             </div>
           </div>
@@ -144,9 +143,10 @@
             <div class="box">
               <div class="icon"><span class="iconify" data-icon="icon-park-twotone:mind-mapping" style="font-size: 50px; color: #68ddba;"></span></div>
               <h4 class="title">Algorithms</h4>
-              <p class="description">- Classification (Logistic Regression)</p>
-              <p class="description">- Regularization <br>
-                (LASSO, Stepwise Selection)</p>
+              <p class="description">- k-Nearest Neighbors (k-NN)</p>
+              <p class="description">- Random Forest Classification</p>
+              <p class="description">- Decision Tree</p>
+              <p class="description">- Support Vector Machine (SVM)</p>
             </div>
           </div>
 
