--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
           <!-- #Project 1 -->
           <div class="col-lg-4 col-md-4" data-aos="fade-up" data-aos-delay="100">
             <div class="property-card">
-              <a href="#" target="_blank">
+              <a href="projects/us_presidential_election_predictive_winner.html" target="_blank">
                 <div class="property-image">
                   <div class="property-image-title"></div>
                 </div>
@@ -335,7 +335,7 @@
           <!-- #Project 2 -->
           <div class="col-lg-4 col-md-4" data-aos="fade-up" data-aos-delay="200">
             <div class="property-card">
-              <a href="#" target="_blank">
+              <a href="projects/nyc_tree-census_ tableau-dashboard.html" target="_blank">
                 <div class="property-image">
                   <div class="property-image-title"></div>
                 </div>
@@ -354,7 +354,7 @@
           <!-- #Project 3 -->
           <div class="col-lg-4 col-md-4" data-aos="fade-up" data-aos-delay="300">
             <div class="property-card">
-              <a href="#" target="_blank">
+              <a href="projects/airbnb_price_estimator.html" target="_blank">
                 <div class="property-image">
                   <div class="property-image-title"></div>
                 </div>
@@ -392,7 +392,7 @@
           <!-- #Project 5 -->
           <div class="col-lg-4 col-md-4" data-aos="fade-up" data-aos-delay="500">
             <div class="property-card">
-              <a href="project5/index.html" target="_blank">
+              <a href="#" target="_blank">
                 <div class="property-image">
                   <div class="property-image-title"></div>
                 </div>
@@ -411,7 +411,7 @@
           <!-- #Project 6 -->
           <div class="col-lg-4 col-md-4" data-aos="fade-up" data-aos-delay="600">
             <div class="property-card">
-              <a href="project6/index.html" target="_blank">
+              <a href="projects/docdigitizer_sponsor.html" target="_blank">
                 <div class="property-image">
                   <div class="property-image-title"></div>
                 </div>
